# agente_vinoteca

./: README.md  setup_vinoteca.sh
vinoteca_ia/: .env.example  .gitignore  README.md  docker-compose.yml  playground.py  product_details.txt  pyproject.toml
vinoteca_ia/agents/: __init__.py  auditor_agent.py  inventory_agent.py  orders_agent.py  router_agent.py  router_team.py  sommelier_agent.py  support_agent.py
vinoteca_ia/api/: __init__.py  deps.py  main.py
vinoteca_ia/api/middleware/: auth.py  logging.py  rate_limit.py
vinoteca_ia/api/routes/: __init__.py  approve.py  audit.py  chat.py  health.py  webhook.py
vinoteca_ia/core/: __init__.py  agent_os_factory.py  correlation.py  guardrails.py  idempotency.py  model_provider.py  orchestrator.py  stuck_state.py
vinoteca_ia/docs/: agente_vinoteca_diseno.html  arquitectura_general_vinoteca.html  diagramas_agentes_vinoteca.html  knowledge_pipeline_sumiller.html
vinoteca_ia/jobs/: __init__.py  nightly_audit.py
vinoteca_ia/prompts/: auditor_v1.md  inventory_v1.md  orders_v1.md  router_team_leader_v1.md  router_v1.md  sommelier_v1.md  support_v1.md
vinoteca_ia/schemas/: __init__.py  agent_io.py  audit.py  customer_profile.py  order.py  session_state.py  tool_responses.py  wine_catalog.py
vinoteca_ia/scripts/: enrich_catalog.py  ensure_database.py  ingest_product_details.py  migrate_mongo.py  seed_catalog.py
vinoteca_ia/static/: index.html
vinoteca_ia/storage/: __init__.py  immutable_log.py  migrations.py  postgres.py
vinoteca_ia/tests/: conftest.py
vinoteca_ia/tools/: __init__.py
(+42 files in other folders)
